finished implementing contact form; need to do session-checking on redis

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+form:
+  mail:
+    to: benjamin.tanone@gmail.com
 spring:
   mail:
     host: smtp.gmail.com
@@ -10,3 +13,4 @@ spring:
           auth: true
           starttls:
             enable: true
+  profiles.active: local
