added redis; added session-handling; made email sending async; added subject-prefix; added exceptions and exception handling

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,3 +1,7 @@
+form:
+  mail:
+    to: benjamin.tanone@gmail.com
+    subject_prefix: "[Contact Form API - LOCAL]"
 spring:
   mail:
     host: smtp.gmail.com
