--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,6 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-actuator:${SpringBootVersion}")
 	implementation("org.springframework.boot:spring-boot-starter-mail:${SpringBootVersion}")
 	implementation('org.projectlombok:lombok:1.16.22')
+	implementation("org.springframework.boot:spring-boot-starter-data-redis:${SpringBootVersion}")
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
