--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 form:
   mail:
     to: benjamin.tanone@gmail.com
+    subject_prefix: "[Contact Form API]"
 spring:
   mail:
     host: smtp.gmail.com
@@ -14,3 +15,7 @@ spring:
           starttls:
             enable: true
   profiles.active: local
+  data.redis.repositories.enabled: true
+  redis:
+    host: localhost
+    port: 6379
