--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ sudo: required
 branches:
   only:
     - master
+before_script:
+  - chmod -x ./gradlew
 deploy:
   skip_cleanup: true
   provider: elasticbeanstalk
