--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 branches:
   only:
     - master
-before_script:
+before_install:
   - chmod -x ./gradlew
 deploy:
   skip_cleanup: true
