--- a/src/main/resources/application-beanstalk.yml
+++ b/src/main/resources/application-beanstalk.yml
@@ -1,1 +1,23 @@
+# set the following environment variables
 server.port: 5000
+form:
+  mail:
+    to: ${TO_EMAIL}
+    subject_prefix: "[Contact Form API - PROD]"
+spring:
+  mail:
+    host: ${MAIL_HOST}
+    port: ${MAIL_PORT}
+    username: ${MAIL_USER}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+  data.redis.repositories.enabled: true
+  redis:
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
+    password: ${REDIS_PASSWORD}
