--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ jdk: oraclejdk8
 branches:
   only:
     - master
+script:
+  - ./gradlew build
 deploy:
   skip_cleanup: true
   provider: elasticbeanstalk
