--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ group = 'com.benjamintanone'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+jar {
+	enabled = true
+}
+
 repositories {
 	mavenCentral()
 }
