--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ jdk: oraclejdk8
 branches:
   only:
     - master
-script:
-  - ./gradlew build
 deploy:
   skip_cleanup: true
   provider: elasticbeanstalk
@@ -16,3 +14,4 @@ deploy:
   app: "about-api-prod"
   env: "AboutApiProd-env-1"
   bucket_name: "about-api-artefact"
+  zip_file: "./"
