--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${SpringBootVersion}")
 	}
 }
 
@@ -18,10 +18,6 @@ apply plugin: 'io.spring.dependency-management'
 group = 'com.benjamintanone'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
-
-jar {
-	enabled = true
-}
 
 repositories {
 	mavenCentral()
