--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ form:
   mail:
     to: benjamin.tanone@gmail.com
     subject_prefix: "[Contact Form API]"
+security:
+  cors:
+    allowed_origins:
+      - "http://localhost:4200"
 spring:
   mail:
     host: smtp.gmail.com
